<resources>
    <string name="app_name">WhatsApp Clone</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_login">Login</string>
    <string name="nao_tem_conta">Não tem uma conta? Cadastre-se</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="configuracoes">Configurações</string>
    <string name="logout">Sair</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="conversas">Conversas</string>
    <string name="contatos">Contatos</string>
    <string name="user_name">Nome do usuário</string>
    <string name="edit">edit</string>
    <string name="textViewUsername">Esse não é seu nomde de usuário. Esse nome será exibido para seus contatos do whatsapp.</string>
    <string name="configurations">Configurações</string>
    <string name="contactName">Name</string>
    <string name="contactEmail">email</string>

</resources>